config/kubernetes/k8s/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canton-otc-stage
  labels:
    app: canton-otc
    environment: stage
